# Signature-Rest-Api

./: .gitignore  QA_STRATEGY.md  README.md  db.sqlite3  hello.py  main.py  major_codes.csv  majors.json  manage.py  pyproject.toml  pytest.ini  requirements.txt  shell.nix  students.json  subjects.json
.github/workflows/: tests.yml
Asistencia/: asgi.py  settings.py  urls.py  wsgi.py
Asistencia/middleware/: logging_middleware.py
data/: majors.json
http/: isAdmin.http  login.http  signup.http  test_token.http
signature/: api.py  models.py  serializers.py  urls.py  utils.py  views.py
signature/middleware/: logging_formatters.py  logging_middleware.py
signature/migrations/: 0001_initial.py  0002_auto_20250427_0714.py  0002_major_faculty.py  0003_auto_20250427_0717.py  0003_insert_majors.py  0004_auto_20250427_0725.py  0004_subject.py  0005_insert_subjects.py  0005_relate_students_subjects.py  0006_alter_permissionuser_managers.py  0006_alter_subject_major.py  0007_delete_subjects.py  0007_majorcode_alter_major_faculty_alter_major_name_and_more.py  0008_add_major_codes.py  0008_reinsert_subjects.py  0008_remove_major_code_majorcode_major.py  0009_relate_code_majors.py  0009_student_major_students_subject_students.py  0010_insert_students.py  0010_remove_subject_major_subject_major.py  0011_delete_students.py  (+5 more)
tests/: REGISTROS DE ASISTENCIA - SAAC ( MARTES 14-05 ARQUITECTURA ).xlsx  conftest.py  test_accounts.py  test_csv.py  test_email_token.py  test_isadmin.py  test_majors.py  test_students.py  test_subjects.py  test_user.py  test_users.py
