[project]
name = "signature-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.6",
    "django>=5.2.1",
    "django-cors-headers>=4.7.0",
    "django-filter>=25.1",
    "djangorestframework>=3.16.0",
    "dotenv>=0.9.9",
    "pandas>=2.2.3",
    "py3-validate-email>=1.0.5.post2",
    "pytest>=8.3.5",
    "requests>=2.32.3",
    "shortuuid>=1.0.13",
]
